--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <h1>Steve Jobs</h1>
-            <h2 id = h2><span>vida</span> | <span>Productos</span> | <span>Empresas</span></span></h2>
+            <h2 id = h2><span>Vida</span> | <span>Productos</span> | <span>Empresas</span></span></h2>
                 <p id = texto>1. Steven Paul Jobs (San Francisco, California; 24 de febrero de 1955-Palo Alto, California;
                          5 de octubre de 2011),8​9​10​11​ más conocido como Steve Jobs, fue un empresario y magnate 
                         de los negocios en el sector informático y de la industria del entretenimiento estadounidense. 
